fixing rangepicker layout on mobile devices

--- a/src/main/resources/static/src/js/components/ui/RangePicker/RangePicker.scss
+++ b/src/main/resources/static/src/js/components/ui/RangePicker/RangePicker.scss
@@ -20,14 +20,4 @@
   .separator {
     font-size: $font-size-m;
   }
-
-  @include phone {
-    .min-picker {
-      flex: 0 1 auto;
-    }
-
-    .max-picker {
-      flex: 1 1 auto;
-    }
-  }
 }
